--- a/src/Styling/index.scss
+++ b/src/Styling/index.scss
@@ -1,7 +1,27 @@
 * {
   transition-duration: 0.2s;
+  margin: 0px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+hr {
+  margin: 8px 0px !important;
+}
+input.p-inputtext.p-component.p-filled.p-inputnumber-input {
+  width: 75px;
+}
+.post-options {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+.panel {
+  width: 25vw;
+}
+.flex {
+  display: flex;
+  gap: 10px;
+  align-items: center;
 }
 .App {
   display: flex;
@@ -11,6 +31,7 @@
 .post-list-text-title,
 .groups-categories-text-title,
 .post-list-images-title {
+  margin: 8px 0px !important;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -29,11 +50,6 @@
   justify-content: center;
   margin: 30px 0px;
 }
-.post-images {
-  display: grid;
-  gap: 10px;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-}
 hr {
   color: black;
   background: black;
@@ -43,9 +59,9 @@ hr {
 .category-name {
   margin: 30px 0px;
 }
-.checkbox-with-label{
-    display: flex;
-    gap: 10px;
+.checkbox-with-label {
+  display: flex;
+  gap: 10px;
 }
 .controls-options {
   display: grid;
