--- a/src/Styling/index.scss
+++ b/src/Styling/index.scss
@@ -137,3 +137,19 @@ hr {
 .text-center {
   text-align: center !important;
 }
+.add-new-text{
+  display: flex;
+  gap: 10px;
+}
+.random-text-list-item{
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  width: 300px;
+  justify-content: space-between;
+  .check-delete{
+    display: flex;
+    gap: 5px;
+    align-items: center;
+  }
+}
